--- a/templates/NationalityCleaner/home.html
+++ b/templates/NationalityCleaner/home.html
@@ -7,9 +7,11 @@
     <div class="form-group">
    <label class="col-md-4 control-label" for="singlebutton"></label>
    <div class="col-md-4 center-block">
-      <button id="singlebutton" name="singlebutton " class="btn btn-primary center-block btn-lg">
-          Clean Nationality
-       </button>
+       <form method="GET" action="{% url 'NationalityClean:index' %}">
+          <button  class="btn btn-primary center-block btn-lg">
+              Clean Nationality
+           </button>
+       </form>
    </div>
 </div>
 
