--- a/templates/NationalityCleaner/index.html
+++ b/templates/NationalityCleaner/index.html
@@ -2,10 +2,11 @@
 {% block body_block %}
 
 
-
+<form action="{% url 'NationalityClean:all_data_post' %}" method="post">
+{% csrf_token %}
 <table>
 
-  <tbody>
+
 <thead>
     <tr>
       <th scope="col">#</th>
@@ -13,24 +14,52 @@
       <th scope="col"> Best Score </th>
       <th scope="col"> Probable Nationality</th>
         <th scope="col"> Select Nationality</th>
-    </tr>
+        <th scope="col"> Correct</th>
   </thead>
+
+    <tbody>
 
         {% for individual_nationality_values in all_nationality %}
             <tr>
+            <form action="{% url 'NationalityClean:data_post' %}" method="post" >
+            {% csrf_token %}
            <td> {{ forloop.counter }}</td>
             {% for each_nationality in individual_nationality_values %}
-                <td>{{ each_nationality }}</td>
+                <td>
+                    <input hidden name="each_nationality_data" value="{{ each_nationality }}">
+                    {{ each_nationality }}</td>
             {% endfor %}
-{#            <td>@meoo</td>#}
 
-             <td><select id="na">{% for D in nationality %}
 
-                 <option {% ifequal D|lower individual_nationality_values.2 %} selected {% endifequal %} value="{{ D }}">{{ D }}</option>{% endfor %}</select></td>
+             <td>{% if individual_nationality_values.1 > 0.90 %}
 
+
+                 {{ individual_nationality_values.2 }}
+                 <input hidden value="{{ individual_nationality_values.2 }}">
+
+                    {% else %}
+
+                    <select id="na">{% for correct_nationality in nationality %}
+
+                     <option {% ifequal correct_nationality|lower individual_nationality_values.2 %} selected {% endifequal %} value="{{ correct_nationality }}">{{ correct_nationality }}</option>{% endfor %}</select></td>
+                    <td><button type="submit" class="btn btn-default btn-lg">
+                    <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Post
+                        </button></td>
+            {% endif %}
+            </form>
             </tr>
             {% endfor %}
 
+
   </tbody>
+
+
+
 </table>
+<button  type="submit" class="btn btn-default btn-lg pull-right mt-auto">
+                    <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Post ALL
+                        </button></td>
+
+</form>
+
 {% endblock %}
