working on post2

--- a/static/NationalityCleaner/indexcss.css
+++ b/static/NationalityCleaner/indexcss.css
@@ -14,7 +14,7 @@ tr:nth-child(even) {
   background-color: #dddddd;
 }
 
-#post_all {
-  postion: relative;
-  right: 0;
+.btn-space {
+    margin-right: 5px;
+    margin-top: 10px;
 }
