--- a/templates/NationalityCleaner/index.html
+++ b/templates/NationalityCleaner/index.html
@@ -2,7 +2,7 @@
 {% block body_block %}
 
 
-<form action="{% url 'NationalityClean:all_data_post' %}" method="post">
+{#<form action="{% url 'NationalityClean:data_post' %}" method="post">#}
 {% csrf_token %}
 <table>
 
@@ -18,28 +18,27 @@
 
     <tbody>
 
-        {% for individual_nationality_values in all_nationality %}
+        {% for nationality in all_nationality %}
             <tr>
             <form action="{% url 'NationalityClean:data_post' %}" method="post" >
             {% csrf_token %}
            <td> {{ forloop.counter }}</td>
 {#            {% for each_nationality in individual_nationality_values %}#}
-                <input hidden name="job_seeker_nationality" value="{{ individual_nationality_values.0 }}">
-                <input hidden name="best_score" value="{{ individual_nationality_values.1 }}">
-                <td>{{ individual_nationality_values.0 }}</td>
-                 <td>{% if individual_nationality_values.1 > 0.98 %}
+                <input hidden name="job_seeker_nationality" value="{{ nationality.unverified_nationality }}">
+                <input hidden name="best_score" value="{{ nationality.score }}">
+                <td>{{ nationality.unverified_nationality }}</td>
+                 <td>{% if nationality.score == 1%}
 
 
-                 {{ individual_nationality_values.2|capfirst }}
-                     <td>{{ individual_nationality_values.1 }}</td>
+                 {{ nationality.verified_nationality|capfirst }}
+                     <td>{{ nationality.score }}</td>
 
 
                     {% else %}
 
-                    <select id="na">{% for correct_nationality in nationality %}
-
-                     <option {% ifequal correct_nationality|lower individual_nationality_values.2 %} selected {% endifequal %} value="{{ correct_nationality }}">{{ correct_nationality }}</option>{% endfor %}</select></td>
-                     <td>{{ individual_nationality_values.1 }}</td>
+                    <select id="na">{% for correct_nationality in df_nationality %}
+                     <option {% ifequal correct_nationality|lower nationality.verified_nationality %} selected {% endifequal %} value="{{ correct_nationality }}">{{ correct_nationality }}</option>{% endfor %}</select></td>
+                     <td>{{ nationality.score }}</td>
                     <td><button name="post_all" value="post_all_data"type="submit" class="btn btn-default btn-md btn-l">
                     <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Post
                         </button>
@@ -63,14 +62,23 @@
             {% endfor %}
 
 
+
   </tbody>
 
 
 
 </table>
+<form action="{% url 'NationalityClean:data_post' %}" method="post">
 <nav aria-label="...">
     <ul>
         <span>
+            <select class="pull-right">
+  <option value="1">0.99</option>
+  <option value="0.99">0.98</option>
+  <option value="0.98">0.97</option>
+  <option value="0.97">0.96</option>
+  <option value="0.96">0.95</option>
+</select>
 <button  type="submit" name="post_all" value="post_all_data" class="btn btn-primary btn-lg pull-right mt-auto">
                     <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Post ALL
                         </button></td>
