unique together added

--- a/templates/NationalityCleaner/base.html
+++ b/templates/NationalityCleaner/base.html
@@ -16,7 +16,7 @@
 <nav class="navbar navbar-expand-lg navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'NationalityClean:home' %}">Remodel Nationality</a>
+      <a class="navbar-brand" href="{% url 'nationality_clean:home' %}">Remodel Nationality</a>
     </div>
   </div>
 </nav>
