--- a/templates/NationalityCleaner/home.html
+++ b/templates/NationalityCleaner/home.html
@@ -7,7 +7,7 @@
     <div class="form-group">
    <label class="col-md-4 control-label" for="singlebutton"></label>
    <div class="col-md-4 center-block">
-       <form method="GET" action="{% url 'NationalityClean:index' %}">
+       <form method="GET" action="{% url 'nationality_clean:index' %}">
           <button  class="btn btn-primary center-block btn-lg">
               Clean Nationality
            </button>
