--- a/templates/nationalityclean/home.html
+++ b/templates/nationalityclean/home.html
@@ -1,4 +1,4 @@
-{% extends "NationalityCleaner/base.html" %}
+{% extends "nationalityclean/base.html" %}
 {% block body_block %}
 
 <div class="container" >
